[tool.poetry]
name = "profil-geojson-dxf"
version = "0.1.0"
description = "Streamlit app for generating DXF from GeoJSON"
authors = ["Twoje Imię <mail@domena.com>"]
package-mode = false  # ← KLUCZOWA LINIA

[tool.poetry.dependencies]
python = ">=3.9"
streamlit = "^1.34.0"
jsons = "^1.6.3"
ezdxf = "^1.1.1"
pyproj = "^3.6.1"
